--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <title>Layona-x Personel Site</title>
+  
+  <!-- HTML -->
+  
+
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="nav">
+    <h1 class="logo">Layona-x</h1>
+   <div class="nav-data">
+      <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
+   </div>
+  </div>
+  <div class="hakkımda">
+    <p>
+      Merhaba Ben Orhan 14 Yaşındayım 9. Sınıfım
+    Web Geliştirme Üzerine Çalışmalarım var.Kendimi Pyhton,Vue.js,JavaScript Üzerinde Geliştirmeye Çalışıyorum Lgs'ye Girecek 2009 lu Arkadaşlara Allah'tan Rahmet Başarılı Arkadaşlarada Az Heyecan Diliyorum Umarım İyi Bir Lise Kazanamayıp Bussines Yaparlar....
+    </p>
+    <button class="hakkımda-buton">Layona-X</button>
+  </div>
+    <h1 class="time"> <p id="gün">00</p><p>/</p><p id="ay">00</p><p>/</p><p id="yil">00</p></h1>
+  <script src="main.js"></script>
+  <style>
+    
+    </style>
+</body>
+  
+</html>
